--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-dzialkowiec.ang",
+  "name": "e-dzialkowiec-ang",
   "version": "0.0.0",
   "engines": {
     "node": ">=20.10.0",
@@ -11,18 +11,24 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build-prod": "ng build --configuration production --base-href=/e-Dzialkowiec.ang/"
+    "build-prod": "ng build --configuration production --base-href=/e-dzialkowiec-ang/"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.4",
+    "@angular/cdk": "^17.3.5",
     "@angular/common": "^17.3.4",
     "@angular/compiler": "^17.3.4",
     "@angular/core": "^17.3.4",
     "@angular/forms": "^17.3.4",
+    "@angular/material": "^17.3.5",
     "@angular/platform-browser": "^17.3.4",
     "@angular/platform-browser-dynamic": "^17.3.4",
     "@angular/router": "^17.3.4",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "bootstrap": "^5.3.3",
+    "prettier": "3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
