--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "prettier": "3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
